changed the buy tab to an about tab

--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <!--
  This page is shown when the extension button is clicked, because the
@@ -26,13 +25,11 @@
       th{
         border-bottom: 1px solid black;
       }
-
       #status {
         /* avoid an excessively wide status text */
         text-overflow: ellipsis;
         min-width: 270px;
         overflow: hidden;
-
       }
       #websiteURL:focus{
         border-color: blue;
@@ -40,11 +37,6 @@
       #outer{
         width: 100%;
         text-align: center;
-      }
-      #direct{
-        color: #B9121B;
-        text-align: center;
-        background-color: #E6E2AF;
       }
       #title{
         color: #002F2F;
@@ -58,8 +50,9 @@
       #permablock:hover{
         background-color: #B9121B;
       }
-      #list-wrap{
-        border: 1px solid #72bcd4;
+      #timeUnits{
+        -webkit-appearance: menulist-button;
+        height: 30px;
       }
       .button-style{
         background-color:#046380;
@@ -107,16 +100,16 @@
       .rowBreak{
         border-right: 1px solid black;
       }
-      .tabs { 
+      .tabs{ 
         border-bottom: 1px solid #DDD;
         padding-bottom:5px;
       }
-      .tabs a {
+      .tabs a{
         border:1px solid #DDD;
         color:#666666;
         padding: 5px 10px;
         text-decoration:none;
-        background-color: #EFECCA;
+        background-color: #EAEAEA;
       }
       .tabs a.active{ 
         background-color: #fff; 
@@ -142,47 +135,39 @@
       <div class="tabs">
         <a href="#" id="home-link" class="tab-link active">Home</a>
         <a href="#" id="list-link" class="tab-link">Block List</a>
-        <a href="#" id="support-link" class="tab-link">Support Me</a>
+        <a href="#" id="about-link" class="tab-link">About</a>
       </div>
         <div id="home" class="tabCon">
             <div id="addSite">
 
               <form>
                 <p id="title"><label>Pokus NOW</label></p>
-                <div id="direct">
-                  <p><label>Enter website url, then click add.</label></p>
-                </div>
                 <p>Website Address:</p>
-                <input name="blockWebsite" class="input-field" type="text" value="" id="websiteURL" size="40" maxlength="30" placeholder="block this site"></input></p>
+                <input name="blockWebsite" class="input-field" type="text" value="" id="websiteURL" size="40" maxlength="30" placeholder="block this site"></input>
                 <p>Comments:</p>
-                <input name="comment" type="text" class="input-field" value="" id="comment" size="40" maxlength="50" placeholder="Reason for blocking this site."></input></p>
-                <p>Block Period:
-                  <select>
-                    <option>Unblock Manually</option>
-                    <option>10 Min</option>
-                    <option>30 Min</option>
-                    <option>1 Hr</option>
-                    <option>2 Hrs</option>
-                    <option>6 Hrs</option>
-                    <option>12 Hrs</option>
-                    <option>1 Day</option>
-                    <option>Permanently</option>
+                <input name="comment" type="text" class="input-field" value="" id="comment" size="40" maxlength="50" placeholder="Reason for blocking this site."></input>
+                <p>Block Period:</p>
+                <input name="blockPeriod" class="input-field" type="text" value="" id="blockPeriod" size="18" maxlength="3" placeholder="Whole numbers only">
+                  <select id="timeUnits">
+                    <option value="1" selected="selected">Minutes</option>
+                    <option value="2">Hours</option>
+                    <option value="3">Days</option>
+                    <option value="4">Unblock Manually</option>
+                    <option value="5">Permanently</option>
                   </select>
-                </p>
-
+                </input>
               </form>
             </div>
+            <hr>
             <div id="outer">
-              <div class="inner"><input type="submit" class="button-style" id="blockNow" value="Block"></div>
-              <div class="inner"><input type="submit" class="button-style" id="permablock" value="Permablock"></div>
-              <div class="inner"><input type="submit" class="button-style" id="blockAll" value="Block All"></div>
+              <div class="inner"><input type="submit" class="button-style" id="blockNow" value="Block"></input></div>
+              <div class="inner"><input type="submit" class="button-style" id="blockAll" value="Block All"></input></div>
             </div>
 
             <hr>
         </div>
 
         <div id="list" class="hide tabCon">
-          <div id="list-wrap">
             <p id="title">Blocked Websites</p>
             <table>
               <tr>
@@ -191,35 +176,35 @@
               </tr>
               <tr>
                 <td id="site0"></td>
-                <td><input id="unblock-0" type="submit" class="button-style unblock-button hide" value="Unblock"></td>
+                <td><p id="unblockTimer-0" class="hide"></p><input id="unblock-0" type="submit" class="button-style unblock-button hide" value="Unblock"></td>
               </tr>
               <tr>
                 <td id="site1"></td>
-                <td><input id="unblock-1" type="submit" class="button-style unblock-button hide" value="Unblock"></td>
+                <td><p id="unblockTimer-1" class="hide"></p><input id="unblock-1" type="submit" class="button-style unblock-button hide" value="Unblock"></td>              
               </tr>
               <tr>
                 <td id="site2"></td>
-                <td><input id="unblock-2" type="submit" class="button-style unblock-button hide" value="Unblock"></td>
+                <td><p id="unblockTimer-2" class="hide"></p><input id="unblock-2" type="submit" class="button-style unblock-button hide" value="Unblock"></td>              
               </tr>
               <tr>
                 <td id="site3"></td>
-                <td><input id="unblock-3" type="submit" class="button-style unblock-button hide" value="Unblock"></td>
+                <td><p id="unblockTimer-3" class="hide"></p><input id="unblock-3" type="submit" class="button-style unblock-button hide" value="Unblock"></td>              
               </tr>
               <tr>
                 <td id="site4"></td>
-                <td><input id="unblock-4" type="submit" class="button-style unblock-button hide" value="Unblock"></td>
+                <td><p id="unblockTimer-4" class="hide"></p><input id="unblock-4" type="submit" class="button-style unblock-button hide" value="Unblock"></td>             
               </tr>
               <tr>
                 <td id="site5"></td>
-                <td><input id="unblock-5" type="submit" class="button-style unblock-button hide" value="Unblock"></td>
+                <td><p id="unblockTimer-5" class="hide"></p><input id="unblock-5" type="submit" class="button-style unblock-button hide" value="Unblock"></td>              
               </tr>
               <tr>
                 <td id="site6"></td>
-                <td><input id="unblock-6" type="submit" class="button-style unblock-button hide" value="Unblock"></td>
+                <td><p id="unblockTimer-6" class="hide"></p><input id="unblock-6" type="submit" class="button-style unblock-button hide" value="Unblock"></td>              
               </tr>
               <tr>
                 <td id="site7"></td>
-                <td><input id="unblock-7" type="submit" class="button-style unblock-button hide" value="Unblock"></td>
+                <td><p id="unblockTimer-7" class="hide"></p><input id="unblock-7" type="submit" class="button-style unblock-button hide" value="Unblock"></td>              
               </tr>
             </table>
 
@@ -232,23 +217,27 @@
                 <th>Status</th>
               </tr>
               <tr>
+                <td id="perm0"></td>
+                <td id="permStat0" class="perm hide">Permablocked</td>
+              </tr>
+              <tr>
                 <td id="perm1"></td>
-                <td id="permStat1" class="perm">Permablocked</td>
+                <td id="permStat1" class="perm hide">Permablocked</td>
               </tr>
               <tr>
                 <td id="perm2"></td>
-                <td id="permStat2" class="perm">Permablocked</td>
+                <td id="permStat2" class="perm hide">Permablocked</td>
               </tr>
               <tr>
-                <td id="perm3"></td>
-                <td id="permStat3" class="perm">Permablocked</td>
+                <td id="perm2"></td>
+                <td id="permStat2" class="perm hide">Permablocked</td>
               </tr>
             </table>
-          </div>
         </div>
-        <div id="support" class="hide tabCon">
+        <div id="about" class="hide tabCon">
 
-          <h4 style="text-align: center">If you like this extension, and want to support me please donate below. This will allow me to push updates regularly, and help me make more things like it.</h4>
+          <h5>I made this extension to help control my procrastination problem. Although there are other extensions similar to it, I decided to make my own to improve my coding skills. I also added features that some other website blocking extensions do not have, such as: the ability to add reasons for blocking the site, the ability to permablock sites and the ability to manually unblock a site that you have blocked by entering your password.</h5>
+          <h4 style="text-align: center">If you like this extension, and found it useful, please consider donating below. This will allow me to push updates regularly, and help me make more things like it.</h4>
           
           <div style="text-align: center">
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
@@ -263,4 +252,3 @@
       </div>
   </body>
 </html>
-
