fixed block site list

--- a/popup.html
+++ b/popup.html
@@ -220,19 +220,23 @@
                 </tr>
                 <tr>
                   <td id="site4"></td>
-                  <td><p id="unblockTimer-4" class="hide"></p><input id="unblock-4" type="submit" class="button-style unblock-button hide" value="Remove"></td>             
+                  <td id="unblockTimer-4" class="hide ubDate"></td>
+                  <td><input id="unblock-4" type="submit" class="button-style unblock-button hide" value="Remove"></td>
                 </tr>
                 <tr>
                   <td id="site5"></td>
-                  <td><p id="unblockTimer-5" class="hide"></p><input id="unblock-5" type="submit" class="button-style unblock-button hide" value="Remove"></td>              
+                  <td id="unblockTimer-5" class="hide ubDate"></td>
+                  <td><input id="unblock-5" type="submit" class="button-style unblock-button hide" value="Remove"></td>         
                 </tr>
                 <tr>
                   <td id="site6"></td>
-                  <td><p id="unblockTimer-6" class="hide"></p><input id="unblock-6" type="submit" class="button-style unblock-button hide" value="Remove"></td>              
+                  <td id="unblockTimer-6" class="hide ubDate"></td>
+                  <td><input id="unblock-6" type="submit" class="button-style unblock-button hide" value="Remove"></td>          
                 </tr>
                 <tr>
                   <td id="site7"></td>
-                  <td><p id="unblockTimer-7" class="hide"></p><input id="unblock-7" type="submit" class="button-style unblock-button hide" value="Remove"></td>              
+                  <td id="unblockTimer-7" class="hide ubDate"></td>
+                  <td><input id="unblock-7" type="submit" class="button-style unblock-button hide" value="Remove"></td>        
                 </tr>
               </table>
             </div>
